Implemented $swap-insurance operation
Reimplemented the swap insurance functionality in the UX and fixed a
number of validation problems and edge cases that would blow up the
insurance save if the effective date for the policy was not set up
properly.

Built an API rest endpoint for $swap-insurance in order to handle the
insurance piece.  Was going to do a FHIR operation here but our FHIR
coverage implementation is woefully inadequate and will need to be
bumped to another PR.

Added some additional helper methods to processing result also.
